# X-TED

./: LICENSE  README.md
Sampled_Dataset/1_Swissport/: swissport_nodes_100.txt  swissport_nodes_1000.txt  swissport_nodes_200.txt  swissport_nodes_300.txt  swissport_nodes_400.txt  swissport_nodes_500.txt  swissport_nodes_600.txt  swissport_nodes_700.txt  swissport_nodes_800.txt  swissport_nodes_900.txt  swissport_nodes_adj_100.txt  swissport_nodes_adj_1000.txt  swissport_nodes_adj_200.txt  swissport_nodes_adj_300.txt  swissport_nodes_adj_400.txt  swissport_nodes_adj_500.txt  swissport_nodes_adj_600.txt  swissport_nodes_adj_700.txt  swissport_nodes_adj_800.txt  swissport_nodes_adj_900.txt
Sampled_Dataset/2_Python/: python_nodes_100.txt  python_nodes_1000.txt  python_nodes_200.txt  python_nodes_300.txt  python_nodes_400.txt  python_nodes_500.txt  python_nodes_600.txt  python_nodes_700.txt  python_nodes_800.txt  python_nodes_900.txt  python_nodes_adj_100.txt  python_nodes_adj_1000.txt  python_nodes_adj_200.txt  python_nodes_adj_300.txt  python_nodes_adj_400.txt  python_nodes_adj_500.txt  python_nodes_adj_600.txt  python_nodes_adj_700.txt  python_nodes_adj_800.txt  python_nodes_adj_900.txt
Sampled_Dataset/4_DBLP/: dblp_nodes_100.txt  dblp_nodes_1000.txt  dblp_nodes_200.txt  dblp_nodes_300.txt  dblp_nodes_400.txt  dblp_nodes_500.txt  dblp_nodes_600.txt  dblp_nodes_700.txt  dblp_nodes_800.txt  dblp_nodes_900.txt  dblp_nodes_adj_100.txt  dblp_nodes_adj_1000.txt  dblp_nodes_adj_200.txt  dblp_nodes_adj_300.txt  dblp_nodes_adj_400.txt  dblp_nodes_adj_500.txt  dblp_nodes_adj_600.txt  dblp_nodes_adj_700.txt  dblp_nodes_adj_800.txt  dblp_nodes_adj_900.txt
Sampled_Dataset_Extra_Large_Trees/python/1000_nodes/: python_nodes_1000.txt  python_nodes_adj_1000.txt
Sampled_Dataset_Extra_Large_Trees/python/2000_nodes/: python_nodes_2000.txt  python_nodes_adj_2000.txt
Sampled_Dataset_Extra_Large_Trees/python/3000_nodes/: python_nodes_3000.txt  python_nodes_adj_3000.txt
TED_C++/: CMakeLists.txt  D_tree.txt  Figure14.txt  TED.cpp  TED_C++.h  backup.txt  bolzano_nodes.txt  bolzano_nodes_adj.txt  bolzano_test.cpp  compute.txt  dataset_preprocess.cpp  dblp_test.cpp  depth.txt  main.cpp  parallel_TED.cpp  parallel_TED_10.cpp  parallel_TED_11.cpp  parallel_TED_12.cpp  parallel_TED_13.cpp  parallel_TED_14.cpp  parallel_TED_15.cpp  parallel_TED_16.cpp  parallel_TED_17.cpp  parallel_TED_18.cpp  parallel_TED_2.cpp  parallel_TED_3.cpp  parallel_TED_4.cpp  parallel_TED_5.cpp  parallel_TED_6.cpp  parallel_TED_7.cpp  parallel_TED_8.cpp  parallel_TED_9.cpp  python_nodes.txt  python_nodes_adj.txt  python_test.cpp  senti_nodes.txt  senti_nodes_adj.txt  sentiment_test.cpp  swissport_100_nodes.txt  swissport_nodes.txt  (+10 more)
TED_C++/scala_test/: swissport_nodes_1000.txt
TED_C++/swissport/: swissport_nodes_adj_1000.txt  swissport_nodes_adj_10000.txt  swissport_nodes_adj_2000.txt
TED_GPU/: CMakeLists.txt  TED.cu  TED_C++.h  algo2.cu  backup.txt  dataset_preprocess.cu  function.cu  main.cu  parallel_TED_18.cu  parallel_strategy.cu  swissport_test.cu  test2.txt  test_1.cu  test_2.cu  threshold_test.cu
TED_GPU/swissport/: swissport_nodes_100.txt  swissport_nodes_10000.txt  swissport_nodes_2000.txt  swissport_nodes_adj_100.txt
TED_GPU/utils/: array_view.h  event.h  launcher.h  shared_value.h  stream.h
X-TED_CPU/: CMakeLists.txt  TED.cpp  TED_C++.h  TED_test.cpp  main.cpp  parallel_computing.cpp
X-TED_GPU/: CMakeLists.txt  TED.cu  TED_C++.h  dataset_processing.cu  function.cu  help.h  main.cu  parallel_X_TED.cu  test_TED.cu
X-TED_GPU/utils/: cuda_utils.h  queue.h  shared_value.h
(+36 files in other folders)
